# scripture-ref-parser

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  workflow.yml
docs/: code-review-issues.md
docs/plans/: 2026-02-20-full-execution-plan.md  2026-02-20-implementation-plan.md  2026-02-20-scripture-ref-parser-design.md  2026-02-22-chapter-verse-clamping-design.md
docs/prs/: fix-centralize-osis-format.md  fix-normalize-is_exact.md
src/parse-scripture-refs/data/_output_public_domain/: metadata-languages.min.json  metadata-scriptures.json
src/parse-scripture-refs/data/_output_public_domain/en-csv/: Publications.csv
src/parse-scripture-refs/data/_output_public_domain/en-html/: pearl-of-great-price.html
src/parse-scripture-refs/data/_output_public_domain/en-json/book-of-mormon/1-nephi/: 1-nephi-1.json  1-nephi-10.json  1-nephi-11.json  1-nephi-13.json  1-nephi-14.json  1-nephi-15.json  1-nephi-17.json  1-nephi-18.json  1-nephi-19.json  1-nephi-2.json  1-nephi-20.json  1-nephi-21.json  1-nephi-22.json  1-nephi-5.json  1-nephi-6.json  1-nephi-7.json  1-nephi-9.json
src/parse-scripture-refs/data/_output_public_domain/en-md/: book-of-mormon.md  doctrine-and-covenants.md  jst-appendix.md  new-testament.md  pearl-of-great-price.md
src/parse-scripture-refs/data/_output_public_domain/en-tsv/: Chapters.tsv
src/parse-scripture-refs/data/canon/: JstAppendix.json  NewTestament.json  PearlOfGreatPrice.json
src/scripture_ref_parser/: __init__.py  types.py
src/scripture_ref_parser/api/: __init__.py
src/scripture_ref_parser/cli/: cli.py
src/scripture_ref_parser/data/: __init__.py  canon_index.json  loader.py
src/scripture_ref_parser/data/_output_public_domain/: README.txt  metadata-languages.json  metadata-scriptures.min.json
src/scripture_ref_parser/data/_output_public_domain/en-csv/: Chapters.csv
src/scripture_ref_parser/data/_output_public_domain/en-html/: book-of-mormon.html  doctrine-and-covenants.html  jst-appendix.html  new-testament.html
src/scripture_ref_parser/data/_output_public_domain/en-md/: doctrine-and-covenants.md  jst-appendix.md
src/scripture_ref_parser/data/_output_public_domain/en-tsv/: Publications.tsv
src/scripture_ref_parser/data/canon/: BibleOrgSys.json  BookOfMormon.json  DoctrineAndCovenants.json  OldTestament.json
src/scripture_ref_parser/normalize/: __init__.py  normalize.py
src/scripture_ref_parser/parse/: __init__.py  parser.py
src/scripture_ref_parser/resolve/: __init__.py  resolver.py
src/scripture_ref_parser/tokenize/: __init__.py  tokenizer.py
tests/integration/: test_api.py  test_cli.py
tests/unit/: test_data_loader.py  test_normalize.py  test_normalize_fuzzy.py  test_parser.py  test_resolver.py  test_resolver_clamping.py  test_tokenizer.py  test_types.py
(+1675 files in other folders)
