[project]
name = "scripture-ref-parser"
version = "0.1.0"
description = "Parses scripture references and returns OSIS references/ranges."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "rapidfuzz>=3.14.3",
]

[project.scripts]
scripture-ref-parser = "scripture_ref_parser.cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scripture_ref_parser"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]
